@@ -11,20 +11,22 @@ import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import org.apache.commons.lang3.SystemUtils;
 import org.jboss.logging.Logger;
 
 import io.quarkus.bootstrap.util.IoUtils;
 import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.annotations.BuildStep;
 import io.quarkus.deployment.builditem.NativeImageFeatureBuildItem;
+import io.quarkus.deployment.builditem.NativeMonitoringBuildItem;
 import io.quarkus.deployment.builditem.SuppressNonRuntimeConfigChangedWarningBuildItem;
 import io.quarkus.deployment.builditem.nativeimage.ExcludeConfigBuildItem;
 import io.quarkus.deployment.builditem.nativeimage.JPMSExportBuildItem;
@@ -53,6 +55,7 @@ import io.quarkus.runtime.LocalesBuildTimeConfig;
 import io.quarkus.runtime.graal.DisableLoggingFeature;
 import io.quarkus.sbom.ApplicationComponent;
 import io.quarkus.sbom.ApplicationManifestConfig;
+import io.smallrye.common.os.OS;
 
 public class NativeImageBuildStep {
 
@@ -95,7 +98,9 @@ public class NativeImageBuildStep {
                 graalVMVersion.toMap(),
                 ApplicationManifestConfig.builder()
                         .setApplicationModel(curateOutcomeBuildItem.getApplicationModel())
-                        .setMainComponent(ApplicationComponent.builder().setPath(image.getPath()))
+                        .setMainComponent(ApplicationComponent.builder()
+                                .setPath(image.getPath())
+                                .setDependencies(List.of(curateOutcomeBuildItem.getApplicationModel().getAppArtifact())))
                         .setRunnerPath(image.getPath())
                         .build());
     }
@@ -115,6 +120,7 @@ public class NativeImageBuildStep {
             List<NativeImageSecurityProviderBuildItem> nativeImageSecurityProviders,
             List<NativeImageFeatureBuildItem> nativeImageFeatures,
             NativeImageRunnerBuildItem nativeImageRunner,
+            List<NativeMonitoringBuildItem> nativeMonitoringBuildItems,
             CurateOutcomeBuildItem curateOutcomeBuildItem) {
 
         Path outputDir;
@@ -147,6 +153,7 @@ public class NativeImageBuildStep {
                 .setGraalVMVersion(GraalVM.Version.CURRENT)
                 .setNativeImageFeatures(nativeImageFeatures)
                 .setContainerBuild(nativeImageRunner.isContainerBuild())
+                .setNativeMonitoringOptions(nativeMonitoringBuildItems)
                 .build();
         List<String> command = nativeImageArgs.getArgs();
 
@@ -196,6 +203,7 @@ public class NativeImageBuildStep {
             Optional<ProcessInheritIODisabledBuildItem> processInheritIODisabledBuildItem,
             List<NativeImageFeatureBuildItem> nativeImageFeatures,
             Optional<NativeImageAgentConfigDirectoryBuildItem> nativeImageAgentConfigDirectoryBuildItem,
+            List<NativeMonitoringBuildItem> nativeMonitoringItems,
             NativeImageRunnerBuildItem nativeImageRunner) {
         if (nativeConfig.debug().enabled()) {
             copyJarSourcesToLib(outputTargetBuildItem, curateOutcomeBuildItem);
@@ -210,7 +218,7 @@ public class NativeImageBuildStep {
         String pie = "";
 
         boolean isContainerBuild = nativeImageRunner.isContainerBuild();
-        if (!isContainerBuild && SystemUtils.IS_OS_LINUX) {
+        if (!isContainerBuild && OS.LINUX.isCurrent()) {
             if (nativeConfig.pie().isPresent() && nativeConfig.pie().get()) {
                 pie = detectPIE();
             } else {
@@ -254,6 +262,7 @@ public class NativeImageBuildStep {
                     .setBrokenClasspath(incompleteClassPathAllowed.isAllow())
                     .setNativeImageSecurityProviders(nativeImageSecurityProviders)
                     .setJPMSExportBuildItems(jpmsExportBuildItems)
+                    .setNativeMonitoringOptions(nativeMonitoringItems)
                     .setEnableModules(enableModules)
                     .setNativeMinimalJavaVersions(nativeMinimalJavaVersions)
                     .setUnsupportedOSes(unsupportedOses)
@@ -289,32 +298,30 @@ public class NativeImageBuildStep {
                 }
             }
 
-            if (graalVMVersion.compareTo(GraalVM.Version.VERSION_23_0_0) >= 0) {
-                // See https://github.com/oracle/graal/issues/4921
-                try (DirectoryStream<Path> sharedLibs = Files.newDirectoryStream(outputDir, "*.{so,dll}")) {
-                    sharedLibs.forEach(src -> {
-                        Path dst = null;
-                        try {
-                            dst = Path.of(outputTargetBuildItem.getOutputDirectory().toAbsolutePath().toString(),
-                                    src.getFileName().toString());
-                            log.debugf("Copying a shared lib from %s to %s.", src, dst);
-                            Files.copy(src, dst, StandardCopyOption.REPLACE_EXISTING);
-                        } catch (IOException e) {
-                            log.errorf("Could not copy shared lib from %s to %s. Continuing. Error: %s", src, dst, e);
-                        }
-                    });
-                } catch (IOException e) {
-                    log.errorf("Could not list files in directory %s. Continuing. Error: %s", outputDir, e);
-                }
+            // See https://github.com/oracle/graal/issues/4921
+            try (DirectoryStream<Path> sharedLibs = Files.newDirectoryStream(outputDir, "*.{so,dll}")) {
+                sharedLibs.forEach(src -> {
+                    Path dst = null;
+                    try {
+                        dst = Path.of(outputTargetBuildItem.getOutputDirectory().toAbsolutePath().toString(),
+                                src.getFileName().toString());
+                        log.debugf("Copying a shared lib from %s to %s.", src, dst);
+                        Files.copy(src, dst, StandardCopyOption.REPLACE_EXISTING);
+                    } catch (IOException e) {
+                        log.errorf("Could not copy shared lib from %s to %s. Continuing. Error: %s", src, dst, e);
+                    }
+                });
+            } catch (IOException e) {
+                log.errorf("Could not list files in directory %s. Continuing. Error: %s", outputDir, e);
             }
 
             System.setProperty("native.image.path", finalExecutablePath.toAbsolutePath().toString());
 
             return new NativeImageBuildItem(finalExecutablePath,
-                    new NativeImageBuildItem.GraalVMVersion(graalVMVersion.fullVersion,
+                    new NativeImageBuildItem.GraalVMVersion(graalVMVersion.getFullVersion(),
                             graalVMVersion.getVersionAsString(),
                             graalVMVersion.javaVersion.feature(),
-                            graalVMVersion.distribution.name()),
+                            graalVMVersion.getDistribution().name()),
                     false);
         } catch (ImageGenerationFailureException e) {
             throw e;
@@ -334,7 +341,7 @@ public class NativeImageBuildStep {
 
     private String getResultingExecutableName(String nativeImageName, boolean isContainerBuild) {
         String resultingExecutableName = nativeImageName;
-        if (SystemUtils.IS_OS_WINDOWS && !isContainerBuild) {
+        if (OS.WINDOWS.isCurrent() && !isContainerBuild) {
             //once image is generated it gets added .exe on Windows
             resultingExecutableName = resultingExecutableName + ".exe";
         }
@@ -356,7 +363,7 @@ public class NativeImageBuildStep {
             String executableName = getNativeImageExecutableName();
             String errorMessage = "Cannot find the `" + executableName
                     + "` in the GRAALVM_HOME, JAVA_HOME and System PATH.";
-            if (!SystemUtils.IS_OS_LINUX) {
+            if (!OS.LINUX.isCurrent()) {
                 // Delay the error: if we're just building native sources, we may not need the build runner at all.
                 return new NativeImageRunnerBuildItem(new NativeImageBuildRunnerError(errorMessage));
             }
@@ -476,7 +483,7 @@ public class NativeImageBuildStep {
 
     private RuntimeException imageGenerationFailed(int exitValue, boolean isContainerBuild) {
         if (exitValue == OOM_ERROR_VALUE) {
-            if (isContainerBuild && !SystemUtils.IS_OS_LINUX) {
+            if (isContainerBuild && !OS.LINUX.isCurrent()) {
                 return new ImageGenerationFailureException("Image generation failed. Exit code was " + exitValue
                         + " which indicates an out of memory error. The most likely cause is Docker not being given enough memory. Also consider increasing the Xmx value for native image generation by setting the \""
                         + QUARKUS_XMX_PROPERTY + "\" property");
@@ -491,8 +498,8 @@ public class NativeImageBuildStep {
     }
 
     private void checkGraalVMVersion(GraalVM.Version version) {
-        log.info("Running Quarkus native-image plugin on " + version.distribution.name() + " " + version.getVersionAsString()
-                + " JDK " + version.javaVersion);
+        log.info("Running Quarkus native-image plugin on " + version.getDistribution().name() + " "
+                + version.getVersionAsString() + " JDK " + version.javaVersion);
         if (version.isObsolete()) {
             throw new IllegalStateException(
                     "Out of date version of GraalVM or Mandrel detected: " + version.getVersionAsString() + "."
@@ -556,7 +563,7 @@ public class NativeImageBuildStep {
     }
 
     private static String getNativeImageExecutableName() {
-        return SystemUtils.IS_OS_WINDOWS ? "native-image.cmd" : "native-image";
+        return OS.WINDOWS.isCurrent() ? "native-image.cmd" : "native-image";
     }
 
     private static String detectNoPIE() {
@@ -607,6 +614,7 @@ public class NativeImageBuildStep {
             private List<NativeMinimalJavaVersionBuildItem> nativeMinimalJavaVersions;
             private List<UnsupportedOSBuildItem> unsupportedOSes;
             private List<NativeImageFeatureBuildItem> nativeImageFeatures;
+            private List<NativeMonitoringBuildItem> nativeMonitoringItems;
             private Path outputDir;
             private String runnerJarName;
             private String pie = "";
@@ -715,6 +723,11 @@ public class NativeImageBuildStep {
                 return this;
             }
 
+            public Builder setNativeMonitoringOptions(List<NativeMonitoringBuildItem> options) {
+                this.nativeMonitoringItems = options;
+                return this;
+            }
+
             @SuppressWarnings("deprecation")
             public NativeImageInvokerInfo build() {
                 List<String> nativeImageArgs = new ArrayList<>();
@@ -748,15 +761,6 @@ public class NativeImageBuildStep {
                         }
                     }
                 }
-
-                final String userLanguage = LocaleProcessor.nativeImageUserLanguage(nativeConfig, localesBuildTimeConfig);
-                if (!userLanguage.isEmpty()) {
-                    nativeImageArgs.add("-J-Duser.language=" + userLanguage);
-                }
-                final String userCountry = LocaleProcessor.nativeImageUserCountry(nativeConfig, localesBuildTimeConfig);
-                if (!userCountry.isEmpty()) {
-                    nativeImageArgs.add("-J-Duser.country=" + userCountry);
-                }
                 final String includeLocales = LocaleProcessor.nativeImageIncludeLocales(nativeConfig, localesBuildTimeConfig);
                 if (!includeLocales.isEmpty()) {
                     if ("all".equals(includeLocales)) {
@@ -782,9 +786,14 @@ public class NativeImageBuildStep {
                 for (NativeImageFeatureBuildItem nativeImageFeature : nativeImageFeatures) {
                     featuresList.add(nativeImageFeature.getQualifiedName());
                 }
+                if (!nativeConfig.autoServiceLoaderRegistration()) {
+                    featuresList.add("io.quarkus.runtime.graal.SkipConsoleServiceProvidersFeature");
+                    // required by the feature
+                    nativeImageArgs.add("-J--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED");
+                }
                 nativeImageArgs.add("--features=" + String.join(",", featuresList));
 
-                if (nativeConfig.debug().enabled() && graalVMVersion.compareTo(GraalVM.Version.VERSION_23_0_0) >= 0) {
+                if (nativeConfig.debug().enabled()) {
                     /*
                      * Instruct GraalVM / Mandrel to keep more accurate information about source locations when generating
                      * debug info for debugging and monitoring tools. This parameter may break compatibility with Truffle.
@@ -821,23 +830,12 @@ public class NativeImageBuildStep {
                     addExperimentalVMOption(nativeImageArgs, "-H:PrintAnalysisCallTreeType=CSV");
                 }
 
-                // only available in GraalVM 22.3.0+.
-                if (graalVMVersion.compareTo(GraalVM.Version.VERSION_22_3_0) >= 0) {
-                    if (graalVMVersion.compareTo(GraalVM.Version.VERSION_23_0_0) < 0) {
-                        // Used to retrieve build time information in 22.3. Starting with 23.0 this info is included in
-                        // the build output json file so there is no need to generate extra files.
-                        nativeImageArgs.add("-H:+CollectImageBuildStatistics");
-                        nativeImageArgs.add("-H:ImageBuildStatisticsFile=" + nativeImageName + "-timing-stats.json");
-                    }
-                    // For getting the build output stats as a JSON file
-                    addExperimentalVMOption(nativeImageArgs,
-                            "-H:BuildOutputJSONFile=" + nativeImageName + "-build-output-stats.json");
-                }
+                // For getting the build output stats as a JSON file
+                addExperimentalVMOption(nativeImageArgs,
+                        "-H:BuildOutputJSONFile=" + nativeImageName + "-build-output-stats.json");
 
-                // only available in GraalVM 23.0+, we want a file with the list of built artifacts
-                if (graalVMVersion.compareTo(GraalVM.Version.VERSION_23_0_0) >= 0) {
-                    addExperimentalVMOption(nativeImageArgs, "-H:+GenerateBuildArtifactsFile");
-                }
+                // Generate a file with the list of built artifacts
+                addExperimentalVMOption(nativeImageArgs, "-H:+GenerateBuildArtifactsFile");
 
                 // only available in GraalVM 23.1.0+
                 if (graalVMVersion.compareTo(GraalVM.Version.VERSION_23_1_0) >= 0) {
@@ -855,6 +853,16 @@ public class NativeImageBuildStep {
                 handleAdditionalProperties(nativeImageArgs);
 
                 addExperimentalVMOption(nativeImageArgs, "-H:+AllowFoldMethods");
+
+                /*
+                 * Foreign Function and Memory API in Native Image, JDK's JEP 454
+                 * This is needed for JDK 24+ internal native calls due to AWT,
+                 * e.g. JDK-8337237 et al.
+                 *
+                 */
+                if (graalVMVersion.compareTo(GraalVM.Version.VERSION_24_2_0) >= 0) {
+                    addExperimentalVMOption(nativeImageArgs, "-H:+ForeignAPISupport");
+                }
 
                 if (nativeConfig.headless()) {
                     nativeImageArgs.add("-J-Djava.awt.headless=true");
@@ -944,14 +952,25 @@ public class NativeImageBuildStep {
                     nativeImageArgs.add("-march=" + nativeConfig.march().get());
                 }
 
-                List<NativeConfig.MonitoringOption> monitoringOptions = new ArrayList<>();
-                monitoringOptions.add(NativeConfig.MonitoringOption.HEAPDUMP);
+                Set<NativeConfig.MonitoringOption> monitoringOptions = new LinkedHashSet<>();
+                if (!OS.WINDOWS.isCurrent() || containerBuild) {
+                    // --enable-monitoring=heapdump is not supported on Windows
+                    monitoringOptions.add(NativeConfig.MonitoringOption.HEAPDUMP);
+                }
+
+                if (nativeMonitoringItems != null && !nativeMonitoringItems.isEmpty()) {
+                    monitoringOptions.addAll(nativeMonitoringItems.stream()
+                            .map(NativeMonitoringBuildItem::getOption)
+                            .collect(Collectors.toSet()));
+                }
+
                 if (nativeConfig.monitoring().isPresent()) {
                     monitoringOptions.addAll(nativeConfig.monitoring().get());
                 }
-                nativeImageArgs.add("--enable-monitoring=" + monitoringOptions.stream()
-                        .distinct()
-                        .map(o -> o.name().toLowerCase(Locale.ROOT)).collect(Collectors.joining(",")));
+                if (!monitoringOptions.isEmpty()) {
+                    nativeImageArgs.add("--enable-monitoring=" + monitoringOptions.stream()
+                            .map(o -> o.name().toLowerCase(Locale.ROOT)).collect(Collectors.joining(",")));
+                }
 
                 if (nativeConfig.autoServiceLoaderRegistration()) {
                     addExperimentalVMOption(nativeImageArgs, "-H:+UseServiceLoaderFeature");
